<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvThirdActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@color/pink"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome_to_the_3_activity"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvPlainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plain_text"/>

        <TextView
            android:id="@+id/tvNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number" />

        <TextView
            android:id="@+id/tvDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decimal" />

        <TextView
            android:id="@+id/tvSwitchState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/switch_state" />

        <Button
            android:id="@+id/btnGoMainPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/back_to_main_activity" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>